fix xlsx lov badge

--- a/index.html
+++ b/index.html
@@ -3,18 +3,30 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>health-expo-manage</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
 
-    <meta property="og:title" content="health-expo-manage" />
-    <meta property="og:description" content="Lovable Generated Project" />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+   <!-- Title / description -->
+<title>Texas Community Health Expo</title>
+<meta name="description" content="Registration and check-in for the Texas Community Health Expo." />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+<!-- Favicons -->
+<link rel="icon" href="/favicon.ico" sizes="any">
+<link rel="icon" href="/favicon.svg" type="image/svg+xml"> <!-- optional -->
+<link rel="apple-touch-icon" href="/apple-touch-icon.png">
+<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#0ea5e9"> <!-- optional -->
+
+
+<!-- Social preview (Open Graph + Twitter) -->
+<meta property="og:type" content="website">
+<meta property="og:title" content="Texas Community Health Expo">
+<meta property="og:description" content="Register, check in, and explore health booths.">
+<meta property="og:image" content="/og.png">  <!-- see cache tip below -->
+
+
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="Texas Community Health Expo">
+<meta name="twitter:description" content="Register, check in, and explore health booths.">
+<meta name="twitter:image" content="/og.png">
+
   </head>
 
   <body>
